k8s/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ghost
  template:
    metadata:
      labels:
        component: ghost
    spec:
      containers:
        - name: ghost
          image: swipelab/rage-ghost:latest
          ports:
            - containerPort: 80
