k8s/ghost-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ghost
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
