k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ghost-cluster
              servicePort: 80
          # - path: /ws/
          #   backend:
          #     serviceName: ghost-cluster
          #     servicePort: 80
